# pckakaku

./: README.md  pyproject.toml
src/kakaku_data/: __init__.py  main.py
src/kakaku_data/all/: all.py  cpu.py  get_data.py
