[project]
name = "kakaku-data"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yo-kanyukari", email = "yokari@outlook.jp" }
]
dependencies = [
    "requests>=2.31.0",
    "BeautifulSoup4>=4.12.2",
    "lxml>=4.9.2",
    "pandas>=2.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
